# gameTheoryAndOperationsResearch_lab2

./: CMakeLists.txt  README.md  analytical_inverse_matrix_method.cpp  analytical_inverse_matrix_method.h  braun_robinson.cpp  braun_robinson.h  gameTheoryAndOperationsResearch_l2.txt  lab2 — копия.docx  lab2.docx  main.cpp  main.define.h  maxmin.cpp  maxmin.h  print.cpp  print.h  vector.cpp  vector.h
