cmake_minimum_required(VERSION 2.8) 

add_executable(main
    maxmin.h    maxmin.cpp
    vector.h    vector.cpp
    print.h     print.cpp
    braun_robinson.h    braun_robinson.cpp
    analytical_inverse_matrix_method.h  analytical_inverse_matrix_method.cpp

    main.define.h

    main.cpp
    )
